Add .well-known/security.txt and update site pages

--- a/experience.html
+++ b/experience.html
@@ -558,7 +558,10 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div style="position:relative;width:100vw;height:100vh;overflow:hidden;display:flex;align-items:center;justify-content:center;">
-            <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638245/35_bczkyk.mp4" autoplay loop muted playsinline style="object-fit:cover;width:100vw;height:100vh;position:absolute;top:0;left:0;z-index:1;" poster="hero-poster.jpg"></video>
+            <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638245/35_bczkyk.mp4" autoplay loop muted playsinline style="object-fit:cover;width:100vw;height:100vh;position:absolute;top:0;left:0;z-index:1;" poster="hero-poster.jpg" aria-label="Background video showing mystery travel experiences for VOYA">
+              <track kind="descriptions" src="" srclang="en" label="Video description for visually impaired users">
+              Your browser does not support the video tag. This video shows mystery travel experiences curated by VOYA.
+            </video>
             <div style="position:absolute;inset:0;background:rgba(0,0,0,0.45);z-index:2;"></div>
             <div class="hero-content" style="position:relative;z-index:3;display:flex;flex-direction:column;align-items:center;justify-content:center;">
                 <h1 class="hero-title">Our Experiences</h1>
