--- a/hidden.html
+++ b/hidden.html
@@ -4,68 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hidden Webpage</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body, h1, li, td, th, legend, label {
+            font-family: 'Inter', Arial, sans-serif;
+        }
+        h2 {
+            color:black
+           }
+        h3 {
+            text-align: center;
+        }
+        body {
+            background-color: #0ecaef;
+            color: #fff;
+            font-size: 1.2rem;
+        }
+   
+        table {
+            border:solid 1px #fff;
+            border-collapse: collapse;
+            background: rgba(0,0,0,0.2);
+            color: #fff;
+        }
+        th, td {
+            border: solid 1px #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        legend {
+            font-size: 1.2rem;
+            color: #fff;
+        }
+        .philosophy-example {
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            color: #fff;
+        }
+        ul {
+            color: #fff;
+        }
+        img {
+            border-radius: 8px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.15);
+        }
+    </style>
 </head>
-<style>
-    body {
-        background-color: #0ecaef;
-        font-family: 'Inter', Arial, sans-serif;
-        color: #fff;
-        font-size: 22px;
-    }
-    h1, h2, h3, legend, th {
-        color: #fff !important;
-        font-family: 'Playfair Display', serif;
-        font-size: 2.5rem;
-        font-weight: 700;
-    }
-    h2 {
-        font-size: 2rem;
-        margin-top: 2rem;
-    }
-    h3 {
-        font-size: 1.5rem;
-        margin-top: 1.5rem;
-    }
-    p, li, td {
-        color: #fff !important;
-        font-family: 'Inter', Arial, sans-serif;
-        font-size: 1.3rem;
-    }
-    table {
-        border:solid 1px #fff;
-        border-collapse: collapse;
-        background: rgba(0,0,0,0.2);
-        color: #fff;
-        font-size: 1.2rem;
-    }
-    th, td {
-        border: solid 1px #fff;
-        padding: 10px;
-        text-align: center;
-    }
-    legend {
-        font-size: 1.5rem;
-        font-family: 'Playfair Display', serif;
-        color: #fff;
-    }
-    .philosophy-example {
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        color: #fff;
-        font-size: 1.2rem;
-    }
-    ul {
-        color: #fff;
-        font-size: 1.3rem;
-        font-family: 'Inter', Arial, sans-serif;
-    }
-    img {
-        border-radius: 8px;
-        box-shadow: 0 4px 24px rgba(0,0,0,0.15);
-    }
-</style>
 <body>
         
     
@@ -108,7 +93,7 @@
     <h2 style="background-color: #fdfefd;">How it Works?</h2>    
         <div>
             <div><img src="61.jpg" alt="Beautiful scenery"/></div>
-                <ul style="font-size: 60px;">
+                <ul style="font-size: 30px;">
                     <li>Our philosophy is rooted in authenticity, local expertise, and personal connection. We work with passionate founders and travel experts who have explored every corner of India, ensuring each trip is filled with hidden gems, unconventional activities, and roads less travelled.</li>
                     <li>With VOYA, every journey is tailored to your preferences and budget. From family vacations to luxury getaways, we handle all the details so you can focus on the experience. Our goal is to transform how you experience India—making travel not just a trip, but a story waiting to unfold.</li>
                 </ul>
