--- a/index.html
+++ b/index.html
@@ -870,7 +870,10 @@
 
   <main>
     <section id="hero">
-      <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638251/final_rleuhd.mp4" autoplay loop muted poster="hero-poster.jpg" aria-label="Background video of travel destinations"></video>
+      <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638251/final_rleuhd.mp4" autoplay loop muted poster="hero-poster.jpg" aria-label="Background video showing travel destinations for VOYA">
+        <track kind="descriptions" src="" srclang="en" label="Video description for visually impaired users">
+        Your browser does not support the video tag. This video shows beautiful travel destinations and experiences curated by VOYA.
+      </video>
       <div class="overlay">
         <div class="logo">VOYA</div>
         <div class="content-wrapper">
