added meta description

--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Experiences - VOYA</title>
+    <meta name="description" content="Explore VOYA's curated mystery adventures. Discover India's hidden treasures through unique travel experiences and secret journeys.">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -559,8 +560,7 @@
     <section class="hero-section">
         <div style="position:relative;width:100vw;height:100vh;overflow:hidden;display:flex;align-items:center;justify-content:center;">
             <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638245/35_bczkyk.mp4" autoplay loop muted playsinline style="object-fit:cover;width:100vw;height:100vh;position:absolute;top:0;left:0;z-index:1;" poster="hero-poster.jpg" aria-label="Background video showing mystery travel experiences for VOYA">
-              <track kind="descriptions" src="" srclang="en" label="Video description for visually impaired users">
-              Your browser does not support the video tag. This video shows mystery travel experiences curated by VOYA.
+              <track kind="descriptions" src="" srclang="en" label="Video depicting aesthetic mystery travel experiences for VOYA"
             </video>
             <div style="position:absolute;inset:0;background:rgba(0,0,0,0.45);z-index:2;"></div>
             <div class="hero-content" style="position:relative;z-index:3;display:flex;flex-direction:column;align-items:center;justify-content:center;">
