--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VOYA India - Secret Journeys</title>
+  <meta name="description" content="Book your free consultation with VOYA. Fill out our quick enquiry form to start your personalized mystery journey across India.">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
@@ -74,8 +75,7 @@
   <section class="relative h-screen flex items-center justify-center overflow-hidden">
     <video autoplay loop muted playsinline class="absolute w-full h-full object-cover" aria-label="Background video showing travel destinations for VOYA">
       <source src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638247/18_z9oye1.mp4" type="video/mp4">
-      <track kind="descriptions" src="" srclang="en" label="Video description for visually impaired users">
-      Your browser does not support the video tag. This video shows beautiful travel destinations and experiences curated by VOYA.
+      <track kind="descriptions" src="" srclang="en" label="Video depicting beautiful scenery and travel experiences">     
     </video>
     
     <div class="absolute inset-0 bg-black bg-opacity-40"></div>
