--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VOYA - Secret Journeys</title>
+  <meta name="description" content="VOYA - Secret Journeys: Discover curated mystery travel experiences across India. Every journey is a hidden wonder, designed for the modern explorer seeking the extraordinary.">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
     *, *::before, *::after {
@@ -871,8 +872,7 @@
   <main>
     <section id="hero">
       <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638251/final_rleuhd.mp4" autoplay loop muted poster="hero-poster.jpg" aria-label="Background video showing travel destinations for VOYA">
-        <track kind="descriptions" src="" srclang="en" label="Video description for visually impaired users">
-        Your browser does not support the video tag. This video shows beautiful travel destinations and experiences curated by VOYA.
+        <track kind="descriptions" src="" srclang="en" label="Aesthric travel video showcasing various destinations and experiences offered by VOYA">
       </video>
       <div class="overlay">
         <div class="logo">VOYA</div>
