made some extra changes in webpages

--- a/hidden.html
+++ b/hidden.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hidden Webpage</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body, h1, li, td, th, legend, label {
             font-family: 'Inter', Arial, sans-serif;
@@ -110,6 +108,35 @@
             </div>
         </div>
         <br>
+    <h2 style="background-color: #fdfefd;">SEO Keywords</h2>
+    <ul>
+        <li>VOYA</li>
+        <li>Mystery adventures</li>
+        <li>Mystery travel experiences</li>
+        <li>Secret journeys</li>
+        <li>Curated mystery adventures</li>
+        <li>India's hidden treasures</li>
+        <li>Mountain Mystery Adventures</li>
+        <li>Mystery Honeymoon Journeys</li>
+        <li>Heritage Mystery Trails</li>
+        <li>Spiritual & Scenic Mysteries</li>
+        <li>Wild India Adventures</li>
+        <li>Begin Your Journey</li>
+        <li>Testimonials</li>
+        <li>Contact Us</li>
+        <li>Surprise journeys</li>
+        <li>Adventure travel India</li>
+        <li>Hidden destinations</li>
+        <li>Unique travel experiences</li>
+        <li>Personalized travel</li>
+        <li>Cultural immersion</li>
+        <li>Luxury accommodations</li>
+        <li>Wildlife encounters</li>
+        <li>Tea gardens</li>
+        <li>Ancient temples</li>
+        <li>Jungle safaris</li>
+        <li>Romantic escapes</li>
+    </ul>
     <h2 style="background-color: #fdfefd;">Philosophy behind our design</h2>
     <div>
         <h3>Minimalist and Modern</h3>
@@ -152,8 +179,7 @@
             <p>High color contrast, large clickable areas, readable fonts, and keyboard-friendly navigation.</p>
             <p>These features ensure that everyone, including users with visual or motor impairments, can easily access and use the site. High color contrast makes text and buttons stand out for those with low vision. Large clickable areas and readable fonts reduce frustration and errors, especially for users with limited dexterity or screen readers. Keyboard-friendly navigation allows users who cannot use a mouse to move through the site efficiently, making VOYA inclusive and welcoming to all.</p>
         </div>
-       
-            </div>
+        <hr>
         
     </div>
 </body>
