--- a/experience.html
+++ b/experience.html
@@ -560,10 +560,13 @@
     <section class="hero-section">
         <div style="position:relative;width:100vw;height:100vh;overflow:hidden;display:flex;align-items:center;justify-content:center;">
             <video src="https://res.cloudinary.com/ddiofei79/video/upload/v1754638245/35_bczkyk.mp4" autoplay loop muted playsinline style="object-fit:cover;width:100vw;height:100vh;position:absolute;top:0;left:0;z-index:1;" poster="hero-poster.jpg" aria-label="Background video showing mystery travel experiences for VOYA">
-              <track kind="descriptions" src="" srclang="en" label="Video depicting aesthetic mystery travel experiences for VOYA"
+              <track kind="descriptions" src="" srclang="en" label="Video depicting aesthetic mystery travel experiences for VOYA">
             </video>
             <div style="position:absolute;inset:0;background:rgba(0,0,0,0.45);z-index:2;"></div>
-            <div class="hero-content" style="position:relative;z-index:3;display:flex;flex-direction:column;align-items:center;justify-content:center;">
+            <div class="vision-text" style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:3;text-align:center;">
+                <span style="font-family:'Playfair Display',serif;font-size:3rem;font-weight:700;color:#fff;text-shadow:0 4px 32px rgba(0,188,212,0.25),0 1px 8px #000;letter-spacing:2px;background:rgba(0,0,0,0.25);padding:1rem 2.5rem;border-radius:18px;box-shadow:0 8px 32px rgba(0,0,0,0.18);">The Vision of your Adventure</span>
+            </div>
+            <div class="hero-content" style="position:relative;z-index:4;display:flex;flex-direction:column;align-items:center;justify-content:center;">
                 <h1 class="hero-title">Our Experiences</h1>
                 <p class="hero-subtitle" style="text-align:center;max-width:600px;margin:0 auto 2rem auto;">
                     Five carefully crafted mystery adventures that reveal India's hidden treasures. From mountain peaks to coastal shores, ancient temples to jungle depths - discover the extraordinary.
