--- a/Aboutus.html
+++ b/Aboutus.html
@@ -194,10 +194,10 @@
         }
         .newsletter-form input:focus { outline: none; border-color: #00bfff; }
         .newsletter-form button {
-            padding: 0.8rem 1.5rem; background: #00bfff; border: none; border-radius: 4px;
+            padding: 0.8rem 1.5rem; background: #005fa3; border: none; border-radius: 4px;
             color: #fff; font-weight: 500; cursor: pointer; transition: background-color 0.3s ease;
         }
-        .newsletter-form button:hover { background: #0099cc; }
+        .newsletter-form button:hover { background: #003d66; }
         .footer-bottom {
             padding-top: 2rem; border-top: 1px solid #333; display: flex;
             justify-content: space-between; align-items: center; font-size: 0.9rem; color: #aaa;
@@ -311,7 +311,7 @@
             <a href="index.html" class="nav-button">Home</a>
             <a href="Aboutus.html" class="nav-button">About Us</a>
             <a href="form.html" class="nav-button">Begin Your Journey</a>
-            <a href="experience.html" class="nav-button">Our Experiences</a>
+            <a href="experience.html" class="nav-button" aria-label="Explore Experiences page">Our Experiences</a>
             <a href="Reviews.html" class="nav-button">Testimonials</a>
             <a href="contact.html" class="nav-button">Contact Us</a>
         </div>
