--- a/experience.html
+++ b/experience.html
@@ -488,7 +488,7 @@
         }
         .newsletter-form button {
           padding: 0.8rem 1.5rem;
-          background: #00bfff;
+          background: #005fa3;
           border: none;
           border-radius: 4px;
           color: #fff;
@@ -497,7 +497,7 @@
           transition: background-color 0.3s ease;
         }
         .newsletter-form button:hover {
-          background: #0099cc;
+          background: #003d66;
         }
         .footer-bottom {
           padding-top: 2rem;
@@ -550,7 +550,7 @@
             <a href="index.html" class="nav-button">Home</a>
             <a href="Aboutus.html" class="nav-button">About Us</a>
             <a href="form.html" class="nav-button">Begin Your Journey</a>
-            <a href="experience.html" class="nav-button">Our Experiences</a>
+            <a href="experience.html" class="nav-button" aria-label="Explore Experiences page">Our Experiences</a>
             <a href="Reviews.html" class="nav-button">Testimonials</a>
             <a href="contact.html" class="nav-button">Contact Us</a>
         </div>
