--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
         <a href="index.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">Home</a>
         <a href="Aboutus.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">About Us</a>
         <div class="nav-item nav-experiences-group" style="position:relative;padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">
-          <a href="experience.html" class="nav-item experiences-title-link" role="menuitem" style="margin-bottom:0;color:#fff;">Our Experiences</a>
+          <a href="experience.html" class="nav-item experiences-title-link" role="menuitem" aria-label="Explore Experiences page" style="margin-bottom:0;color:#fff;">Our Experiences</a>
         </div>
         <a href="Reviews.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">Testimonials</a>
         <a href="#how-it-works" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">How It Works</a>
@@ -348,7 +348,7 @@
           <form id="newsletter-form" class="newsletter-form" action="#" method="POST" style="display:flex;gap:8px;flex-wrap:wrap;align-items:center;">
             <input type="email" id="newsletterEmail" name="newsletterEmail" placeholder="Enter your email" required style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;min-width:220px;">
             <input type="text" id="newsletter-hp" name="hp_field" style="display:none" autocomplete="off" tabindex="-1">
-            <button type="submit" id="newsletter-submit" style="background:#00bcd4;color:#fff;padding:8px 20px;border:none;border-radius:6px;font-weight:600;cursor:pointer;">Subscribe</button>
+            <button type="submit" id="newsletter-submit" style="background:#005fa3;color:#fff;padding:8px 20px;border:none;border-radius:6px;font-weight:600;cursor:pointer;">Subscribe</button>
           </form>
           <div id="newsletter-msg" style="margin-top:8px;font-size:0.95rem;display:none;"></div>
         </div>
