--- a/contact.html
+++ b/contact.html
@@ -356,7 +356,7 @@
         }
         .newsletter-form button {
           padding: 0.8rem 1.5rem;
-          background: #00bfff;
+          background: #005fa3;
           border: none;
           border-radius: 4px;
           color: #fff;
@@ -365,7 +365,7 @@
           transition: background-color 0.3s ease;
         }
         .newsletter-form button:hover {
-          background: #0099cc;
+          background: #003d66;
         }
         .footer-bottom {
           padding-top: 2rem;
@@ -516,7 +516,7 @@
             <a href="index.html" class="nav-button">Home</a>
             <a href="Aboutus.html" class="nav-button">About Us</a>
             <a href="form.html" class="nav-button">Begin Your Journey</a>
-            <a href="experience.html" class="nav-button">Our Experiences</a>
+            <a href="experience.html" class="nav-button" aria-label="Explore Experiences page">Our Experiences</a>
             <a href="Reviews.html" class="nav-button">Testimonials</a>
             <a href="contact.html" class="nav-button">Contact Us</a>
         </div>
@@ -712,7 +712,7 @@
             <form id="newsletter-form" class="newsletter-form" action="#" method="POST" style="display:flex;gap:8px;flex-wrap:wrap;align-items:center;">
               <input type="email" id="newsletterEmail" name="newsletterEmail" placeholder="Enter your email" required style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;min-width:220px;">
               <input type="text" id="newsletter-hp" name="hp_field" style="display:none" autocomplete="off" tabindex="-1">
-              <button type="submit" id="newsletter-submit" style="background:#00bcd4;color:#fff;padding:8px 20px;border:none;border-radius:6px;font-weight:600;cursor:pointer;">Subscribe</button>
+              <button type="submit" id="newsletter-submit" style="background:#005fa3;color:#fff;padding:8px 20px;border:none;border-radius:6px;font-weight:600;cursor:pointer;">Subscribe</button>
             </form>
             <div id="newsletter-msg" style="margin-top:8px;font-size:0.95rem;display:none;"></div>
           </div>
