--- a/index.html
+++ b/index.html
@@ -926,42 +926,42 @@
                         <div class="card-overlay">
                             <h3 class="card-title">Trekking Trails</h3>
                             <p class="card-subtitle">Unplug in the Himalayas</p>
-                            <a href="experience.html"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
+                            <a href="experience.html" aria-label="Explore Trekking Trails experience"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
                         </div>
                     </div>
                     <div class="experience-card" style="background-image: url('2.jpg');">
                         <div class="card-overlay">
                             <h3 class="card-title">Romantic Escapes</h3>
                             <p class="card-subtitle">Couple-only secret getaways</p>
-                            <a href="experience.html"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
+                            <a href="experience.html" aria-label="Explore Romantic Escapes experience"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
                         </div>
                     </div>
                     <div class="experience-card" style="background-image: url('3.jpeg');">
                         <div class="card-overlay">
                             <h3 class="card-title">Culture & Craft</h3>
                             <p class="card-subtitle">Live the folk, eat the soul</p>
-                            <a href="experience.html"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
+                            <a href="experience.html" aria-label="Explore Culture & Craft experience"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
                         </div>
                     </div>
                     <div class="experience-card" style="background-image: url('4.jpg');">
                         <div class="card-overlay">
                             <h3 class="card-title">Tea & Temples</h3>
                             <p class="card-subtitle">Peace in the North-East</p>
-                            <a href="experience.html"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
+                            <a href="experience.html" aria-label="Explore Tea & Temples experience"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
                         </div>
                     </div>
                     <div class="experience-card" style="background-image: url('5.jpg');">
                         <div class="card-overlay">
                             <h3 class="card-title">Jungle Whispers</h3>
                             <p class="card-subtitle">Into the wild & beyond</p>
-                            <a href="experience.html"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
+                            <a href="experience.html" aria-label="Explore Jungle Whispers experience"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
                         </div>
                     </div>
                     <div class="experience-card" style="background-image: url('6.jpg');">
                         <div class="card-overlay">
                             <h3 class="card-title">Mystery Package</h3>
                             <p class="card-subtitle">Let us surprise you</p>
-                            <a href="experience.html"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
+                            <a href="experience.html" aria-label="Explore Mystery Package experience"><button class="card-btn explore-more-btn" style="display:none;position:absolute;left:50%;bottom:2rem;transform:translateX(-50%);">Explore More</button></a>
                         </div>
                     </div>
                 </div>
@@ -1082,7 +1082,7 @@
             <input type="text" id="newsletter-hp" name="hp_field" style="display:none" autocomplete="off" tabindex="-1">
             <button type="submit" id="newsletter-submit">Subscribe</button>
           </form>
-          <div id="newsletter-msg" style="display:none;margin-top:0.5rem;color:#0b69ff;"></div>
+          <div id="newsletter-msg" style="display:none;margin-top:0.5rem;color:#005fa3;"></div>
         </div>
       </div>
       <div class="footer-bottom">
@@ -1179,7 +1179,7 @@
     }
     .newsletter-form button {
       padding: 0.8rem 1.5rem;
-      background: #00bfff;
+      background: #005fa3;
       border: none;
       border-radius: 4px;
       color: #fff;
@@ -1188,7 +1188,7 @@
       transition: background-color 0.3s ease;
     }
     .newsletter-form button:hover {
-      background: #0099cc;
+      background: #003d66;
     }
     .footer-bottom {
       padding-top: 2rem;
