made some extraaa changes

--- a/hidden.html
+++ b/hidden.html
@@ -43,10 +43,7 @@
         ul {
             color: #fff;
         }
-        img {
-            border-radius: 8px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.15);
-        }
+    
     </style>
 </head>
 <body>
@@ -108,6 +105,33 @@
             </div>
         </div>
         <br>
+    <h2 style="background-color: #fdfefd;">List of Stakeholders</h2> 
+        <table>
+            <thead>
+                <tr>
+                    <th>S.no</th>
+                    <th>Stakeholder</th>
+                    <th>Role </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1.</td>
+                    <td></td>
+                    <td>IPM05035</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Ingle Nishant Gajanan</td>
+                    <td>IPM05032</td>
+                </tr>
+                <tr>
+                    <td>3.</td>
+                    <td>Aryan Sethia</td>
+                    <td>IPM05015</td>
+                </tr>
+            </tbody>
+        </table>
     <h2 style="background-color: #fdfefd;">SEO Keywords</h2>
     <ul>
         <li>VOYA</li>
